--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,67 @@
 /******************* Fonts *******************/
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;600&family=Roboto+Slab:wght@300;600&display=swap');
 
+/******************* General *******************/
 body {
     font-family: 'Roboto Mono', monospace;
+    font-weight:100;
+    background-color:#264653;
+    color:#ffff;
 }
 
+/******************* Overhead Site NavBar *******************/
+.navbar-bottom-border {
+    border-bottom: 1px solid #96ACB7;
+}
 
-/******************* Hero Profile *******************/
+.nav-link {
+    color: #000000;
+}
 
+.navbar-brand {
+    color: #000000;
+    font-weight: 100;
+}
+
+.bg-gunmetal {
+    background-color: #2B343B;
+}
+
+/******************* Hero Profile Icon *******************/
+
+/* div containing the hero image */
 .home-hero-image-div {
     padding-top: 4rem;
     padding-bottom: 2rem;
 }
 
+/* styled circular div which houses profile image  */
 .home-hero-image-circle {
     height: 10rem;
     width: 10rem;
-    background: red;
+    border: 1rem solid;
+    /* insert color palette here */
+    background-color: #E76F51;
+    /* insert color palette here */
+    border-color: #F4A261;
     border-radius: 50%;
     margin: auto;
-    border: solid;
 }
-
 
 .home-hero-blurb-text{
     text-align: center;
+}
+
+.home-hero-blurb-text > h2{
+    
+    font-size: 2rem;
+}
+
+.home-hero-blurb-text > h1{
+    font-family: 'Roboto Slab', monospace;
+    font-weight: 600;
+    font-size: 4rem;
 }
 
 /******************* Home Page Big Navigation Buttons *******************/
@@ -32,16 +69,19 @@ body {
 .home-nav-button-circle {
     height: 8rem;
     width: 8rem;
-    background: red;
     border-radius: 50%;
     text-align: center;
     border: 6px solid;
+    /* insert color palette here */
+    background:#E76F51;
+    /* insert color palette here */
+    border-color: #F4A261;
     margin: auto;
     font-size: 5rem;
 }
 
 .home-nav-button-div {
-    padding: 10rem 0;
+    padding: 9rem 0 10rem 0;
 }
 
 #home-nav-contact-special-div{
@@ -51,9 +91,38 @@ body {
 .home-nav-contact-special-button{
     margin: auto;
     text-align: center;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0;
     width: 8rem;
+    color: #2b343b;
+    background-color: #E9C46A;
+    font-weight: 600;
+    border-width: 0;
 }
+
+.home-nav-button-object {
+    /* insert color palette here */
+    /* color: #F79824; */
+    color: #ffff;
+    text-align: center;
+}
+
+.home-nav-button-icon {
+    position: relative;
+    bottom: 0.25rem;
+}
+
+.home-nav-button-text {
+    position: relative;
+    color: #ffff;
+    top: 1rem;
+}
+
+.home-nav-button-object:hover {
+    /* insert color palette here */
+    color: #E9C46A;
+    text-decoration: none;
+}
+
 
 /******************* MEDIA QUERIES *******************/
 
@@ -61,9 +130,25 @@ body {
 @media screen and (max-width: 576px) {
 
     /******* HOME PAGE *******/
-    /*full site navigation buttons to be removed*/
+
+    /*full site navigation buttons to be removed (replaced by contact me button)*/
     .home-nav-button-div {
         display: none;
+    }
+
+    /* fit blurb text to smaller screen  */
+    .home-hero-blurb-text > h2 {
+        font-size: 1.25rem;
+        padding: 0;
+    }
+    .home-hero-blurb-text > h1 {
+        font-size: 2.7rem;
+        padding: 0;
+    }
+
+    .home-hero-blurb-text > p {
+        font-size: 1rem;
+        padding: 0;
     }
 }
 
@@ -71,14 +156,13 @@ body {
 @media screen and (min-width: 576px) {
 
     /******* HOME PAGE *******/
-    /*navigation to contact page button to be be added */
+    /*navigation to contact page button to be be added (replaces big site navigation buttons)*/
     #home-nav-contact-special-div {
         display: none;
     }
 
     .home {
         height: 30rem;
-        /* padding-top: 7rem; */
     }
 
     .home-hero-image-div {
@@ -96,5 +180,10 @@ body {
 
     .home-hero-blurb-text {
         text-align: left;
+        
+    }
+
+    .home-hero-blurb-text > p {
+        padding-right: 30%;
     }
 }
