--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 /******************* Fonts *******************/
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;600&family=Roboto+Slab:wght@300;600&display=swap');
-
 /******************* General *******************/
 body {
     font-family: 'Roboto Mono', monospace;
@@ -9,85 +8,69 @@ body {
     background-color:#264653;
     color:#ffff;
 }
-
 /******************* Overhead Site NavBar *******************/
 .navbar-bottom-border {
     border-bottom: 1px solid #96ACB7;
 }
-
 .nav-link {
     color: #000000;
 }
-
 .navbar-brand {
     color: #000000;
     font-weight: 100;
 }
-
 .bg-gunmetal {
     background-color: #2B343B;
 }
-
-/******************* Hero Profile Icon *******************/
-
-/* div containing the hero image */
+/******************* Home Page Hero Profile Icon *******************/
+ /* div containing the hero image */
 .home-hero-image-div {
     padding-top: 4rem;
     padding-bottom: 2rem;
 }
-
 /* styled circular div which houses profile image  */
 .home-hero-image-circle {
     height: 10rem;
     width: 10rem;
-    border: 1rem solid;
     /* insert color palette here */
     background-color: #E76F51;
     /* insert color palette here */
-    border-color: #F4A261;
+    border: 1rem solid #F4A261;
     border-radius: 50%;
     margin: auto;
 }
-
 .home-hero-blurb-text{
     text-align: center;
 }
-
 .home-hero-blurb-text > h2{
-    
-    font-size: 2rem;
+    font-size: 1.25rem;
+    padding: 0;
 }
-
 .home-hero-blurb-text > h1{
     font-family: 'Roboto Slab', monospace;
     font-weight: 600;
-    font-size: 4rem;
+    font-size: 2.7rem;
+    padding: 0;
 }
-
 /******************* Home Page Big Navigation Buttons *******************/
-
 .home-nav-button-circle {
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
     text-align: center;
-    border: 6px solid;
     /* insert color palette here */
     background:#E76F51;
     /* insert color palette here */
-    border-color: #F4A261;
+    border: 6px solid #F4A261;
     margin: auto;
     font-size: 5rem;
 }
-
 .home-nav-button-div {
-    padding: 9rem 0 10rem 0;
+    display: none;
 }
-
 #home-nav-contact-special-div{
     padding-bottom: 1rem ;
 }
-
 .home-nav-contact-special-button{
     margin: auto;
     text-align: center;
@@ -98,91 +81,92 @@ body {
     font-weight: 600;
     border-width: 0;
 }
-
 .home-nav-button-object {
     /* insert color palette here */
-    /* color: #F79824; */
     color: #ffff;
     text-align: center;
 }
-
 .home-nav-button-icon {
     position: relative;
-    bottom: 0.25rem;
+    bottom: .25rem;
 }
-
 .home-nav-button-text {
     position: relative;
     color: #ffff;
     top: 1rem;
 }
-
 .home-nav-button-object:hover {
     /* insert color palette here */
     color: #E9C46A;
     text-decoration: none;
 }
-
-
-/******************* MEDIA QUERIES *******************/
-
-/* smaller than iphone queries */
-@media screen and (max-width: 576px) {
-
-    /******* HOME PAGE *******/
-
-    /*full site navigation buttons to be removed (replaced by contact me button)*/
-    .home-nav-button-div {
-        display: none;
-    }
-
-    /* fit blurb text to smaller screen  */
-    .home-hero-blurb-text > h2 {
-        font-size: 1.25rem;
-        padding: 0;
-    }
-    .home-hero-blurb-text > h1 {
-        font-size: 2.7rem;
-        padding: 0;
-    }
-
-    .home-hero-blurb-text > p {
-        font-size: 1rem;
-        padding: 0;
-    }
+.home-hero-blurb-text > p {
+    font-size: 1rem;
+    padding: 0;
 }
-
+/******************* About Me Page Timeline *******************/
+.about-header {
+    text-align: center;
+}
+.about-timeline {
+    padding: 0;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+}
+.about-timeline-item {
+    text-align: center;
+    width: 30%;
+    padding: 0;
+    border-left: .2rem solid #F4A261;
+}
+/* timeline disc (adapted from rosie odenkirk practice bootstrap project) */
+.timeline-item-title::before {
+    display: block;
+    position: absolute;
+    left: -.6rem;
+    top: .7rem;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 1rem;
+    border: .2rem solid #F4A261;
+    content: '';
+    background: #E9C46A;
+}
+/******************* MEDIA QUERIES *******************/
 /* bigger than iphone queries */
 @media screen and (min-width: 576px) {
-
     /******* HOME PAGE *******/
     /*navigation to contact page button to be be added (replaces big site navigation buttons)*/
     #home-nav-contact-special-div {
         display: none;
     }
-
+    .home-hero-blurb-text > h2 {
+        font-size: 2rem;
+    }
+    .home-hero-blurb-text > h1 {
+        font-size: 4rem;
+    }
+    .home-nav-button-div {
+        display: inline-block;
+        padding: 9rem 0 10rem 0;
+    }
     .home {
         height: 30rem;
     }
-
     .home-hero-image-div {
-        padding: 11rem 0 0 18%;
+        padding: 11rem 0 0 1%;
     }
-
     .home-hero-image-circle{
         width: 20rem;
         height: 20rem;
     }
-
     .home-hero-blurb{
         padding: 15rem 0;
     }
-
     .home-hero-blurb-text {
         text-align: left;
-        
     }
-
     .home-hero-blurb-text > p {
         padding-right: 30%;
     }
