--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ body {
     font-weight: 600;
     text-align: center;
 }
+.btn-sienna {
+    border: 1px solid #2b343b;
+    color: #2b343b;
+    background-color: #E9C46A;
+}
 /******************* Overhead Site NavBar *******************/
 .navbar-bottom-border {
     border-bottom: 1px solid #96ACB7;
@@ -75,7 +80,8 @@ body {
     display: none;
 }
 #home-nav-contact-special-div{
-    padding-bottom: 1rem ;
+    padding: .5rem;
+    margin: 0 30%;
 }
 .home-nav-contact-special-button{
     margin: auto;
@@ -136,13 +142,14 @@ body {
     content: '';
     background: #E9C46A;
 }
-/******************* About Me Page Timeline *******************/
+/******************* Skills Page*******************/
 .skills-box {
     color: #fff;
-    margin: 1rem auto;
+    margin: 1rem .5rem 1rem 0;
     border-radius: 5%;
     padding: 1rem;
-    border: .05rem solid #96ACB7;
+    border: .05rem solid #2B343B;
+    background-color: #293D47;
 }
 .skills-box-header {
     text-align: center;
@@ -175,18 +182,25 @@ body {
 ul {
     padding:0;
 }
-/* .expertise-item::before {
+/******************* Projects Page *******************/
+.projects-box {
+    text-align: center;
+    border: .05rem solid #2B343B;
+    margin: 1rem .5rem 1rem 0;
+    padding: 1rem 0;
+    border-radius: 5%;
+}
+.project-card {
+    height: 25rem; 
+    width: 20rem;
+    font-size: 70%;
+    background-color: #293D47;
+    margin-top: 1rem;
     display: inline-block;
-    position: relative;
-    left: -.5rem;
-    top: .1rem;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 1rem;
-    border: .2rem solid #F4A261;
-    content: '';
-    background: #E9C46A;
-} */
+}
+.project-card-image{
+    height: 50%;
+}
 /******************* MEDIA QUERIES *******************/
 /* bigger than iphone queries */
 @media screen and (min-width: 576px) {
